# hermes

./: .gitignore  N_1.nusmv  N_100.nusmv  N_2.txt  N_3.txt  alessandro1.nusmv  cvc4_N_1_tmp.smt2  cvc4_N_2_tmp.smt2  cvc4_tmp.smt2  delay_input.txt  delay_output.txt  dreal_tmp.smt2  dummy.nusmv  full_smt.smt2  report.txt  result.txt  tmp.py  tmp.smt2  yices_N_2_tmp.smt2  yices_tmp.smt2  z3_tmp.smt2
3rd_del/: example.smt2
PI-Aug-2019-stats/: setup.txt
andy/: N_1.smt2  N_2.smt2  N_3.smt2  N_4.smt2  N_5.smt2  N_6.smt2
dispatcher/: Dockerfile  Makefile  README  README.md  dispatcher  dispatcher.py  subs.sh
dispatcher/dispatcher/solvers/releases/veriT-stable2016/: AUTHORS  INSTALL  LICENSE  Makefile  Makefile.config  Makefile.config.in  README  config.status  configure  configure.ac  veriT  veriT-SAT
dispatcher/dispatcher/solvers/releases/veriT-stable2016/autom4te.cache/: output.0  requests  traces.0
dispatcher/dispatcher/solvers/releases/veriT-stable2016/doc/: Doxyfile.dev
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/: complete.c  complete.h  config.h  hint.c  hint.h  main.c  main.dia  response.c  response.h  undo.c  undo.h  veriT-state.c  veriT-state.h  veriT.c  veriT.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/SAT/: veriT-SAT.c  veriT-SAT.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/arith/: LA-hw.c  LA-hw.h  LA-mp.c  LA-mp.h  LA-pre.c  LA-pre.h  LA-xx.c.tpl  LA-xx.h.tpl  LA.c  LA.h  eq-store.c  eq-store.h  gcd-cache.def  linear.txt  numbers-hw.c  numbers-hw.h  numbers-mp.c  numbers-mp.h  numbers-xx.h.tpl  simplex-hw.c  simplex-hw.h  simplex-mp.c  simplex-mp.h  simplex-xx.c.tpl  simplex-xx.h.tpl  simplex.c  simplex.h  totality.c  totality.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/bool/: bool.c  bool.h  clause.c  cnf.c  cnf.c.tpl  cnf.h  literal.c  literal.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/congruence/: congruence.c  congruence.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/instantiation/: ccfv-bckt.c  ccfv-bckt.h  ccfv-constr.c  ccfv-constr.h  ccfv-mod.c  ccfv-mod.h  ccfv.c  ccfv.h  free-vars.c  free-vars.h  inst-index.c  inst-index.h  inst-man.c  inst-man.h  inst-pre.c  inst-pre.h  inst-trigger.c  inst-trigger.h  ujobs.c  ujobs.h  unify.c  unify.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/misc/: write-gcd-cache.c
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/nla/: nla.c  nla.h  reduce.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/parsers/dimacs/: dimacs.c  dimacs.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/parsers/smtlib2/: .gitignore  smtfun.c  smtfun.h  smtlex.l  smtlib2.h  smtsyn.y  smttypes.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/parsers/tptp/: .gitignore  parser_macro.h  tptp.h  tptp_fun.c  tptp_fun.h  tptplex.l  tptpsyn.y
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/pre/: HOL.c  HOL.h  bclauses.c  bclauses.h  bfun-elim.c  bfun-elim.h  binder-rename.c  binder-rename.h  distinct-elim.c  distinct-elim.h  eq-norm.c  eq-norm.h  fix-trigger.c  fix-trigger.h  ite-elim.c  ite-elim.h  let-elim.c  let-elim.h  nary-elim.c  nary-elim.h  pm.c  pm.h  pre.c  pre.dia  pre.h  pre_instances.dia  qnt-tidy.c  qnt-tidy.h  qnt-trigger.c  qnt-trigger.h  rare-symb.c  rare-symb.h  simp-formula-sat.c  simp-formula-sat.h  simp-sym.c  simp-sym.h  simp-unit.c  simp-unit.h  simplify.c  simplify.h  (+2 more)
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/proof/: proof.c  proof.h  proof_id.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/symbolic/: DAG-arith.c  DAG-arith.h  DAG-flag.c  DAG-flag.h  DAG-print.c  DAG-print.h  DAG-prop.c  DAG-prop.h  DAG-ptr.h  DAG-smtlib.c  DAG-sort-pm.c  DAG-sort-pm.h  DAG-sort.c  DAG-sort.h  DAG-stat.c  DAG-stat.h  DAG-subst.c  DAG-subst.h  DAG-symb-DAG.c  DAG-symb-DAG.h  DAG-symb.c  DAG-symb.h  DAG-tmp.c  DAG-tmp.h  DAG.c  DAG.h  dbg-trigger.c  dbg-trigger.h  polarities.h  recursion.c  recursion.h  veriT-DAG.h  veriT-status.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/utils/: assoc.h  bitset.c  bitset.h  dll-DAG.h  dll-TYPE.tpl  dll.c  dll.h  general.c  general.h  h-util.c  h-util.h  h.h  ha.c.tpl  hash.c  hash.h  hashmap.c  hashmap.h  hk.h  list.c  list.h  nonce.c  nonce.h  options.c  options.h  stack.h  statistics.c  statistics.h  sys.c  sys.h  table.c  table.h  types.h  veriT-qsort.c  veriT-qsort.h  veriT-signal.c  veriT-signal.h
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/veriT-SAT/: ex1.cnf  main.c
dispatcher/dispatcher/solvers/releases/veriT-stable2016/src/veriT-SAT/SAT-test/: README.txt  SAT-test.c  SAT-test2.c
examples/: asses2_1.lisp  assesment2_test_reasoning_graph_relaxed.txt  assesment2_test_reasoning_graph_relaxed_result.txt  assessment2_modal_rg.txt  assessment2_modal_rg_does_not_hold_result.txt  assessment2_modal_rg_does_not_holds.txt  assessment2_modal_rg_holds.txt  assessment2_modal_rg_holds_result.txt  assessment2_model1.txt  assessment2_test1_reasoning_graph.txt  assessment2_test1_reasoning_graph_dt.txt  assessment2_test1_reasoning_graph_dt_result.txt  assessment2_test1_reasoning_graph_encoded.txt  assessment2_test1_reasoning_graph_relaxed.txt  assessment2_test1_reasoning_graph_relaxed_result.txt  assessment2_test1_reasoning_graph_result.txt  friday_bug.lisp  network.smt2  network_no_sets.smt2  network_no_sets_no_dt.smt2  network_try1.smt2  nusmv_result_my_enc.txt  nusmv_result_plain.txt  nusmv_result_web_enc.txt  reasoning_graph_2_nusmv.txt  reasoning_graph_3_nusmv.txt  reasoning_graph_3_nusmv_result.txt  reasoning_graph_nusmv.txt  reasoning_graph_nusmv_delay.txt  reasoning_graph_nusmv_delay_result.txt  reasoning_graph_nusmv_result.txt  simple_test.smt2  solver_input.lisp  solver_input_extra_distincts.lisp  solver_input_extra_distincts_n_is_1.lisp  solver_input_mime.lisp  solver_input_mime_no_alpha_in_E_10.lisp  split1.smt2  split2.smt2
final_report/: main.aux  main.tex  makefile  mybib.bib
model-core-examples/: ack_info.txt  cvc4.smt2  model.txt  (+2 more)
(+201 files in other folders)
